--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <artifact.version>${project.version}</artifact.version>
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
-    <asakusafw.version>0.7.4-hadoop2</asakusafw.version>
-    <asakusafw-lang.version>0.2.0</asakusafw-lang.version>
+    <asakusafw.version>0.7.5-hadoop2</asakusafw.version>
+    <asakusafw-lang.version>0.2.1-SNAPSHOT</asakusafw-lang.version>
 
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>${scala.compat.version}.6</scala.version>
