--- a/pom.xml
+++ b/pom.xml
@@ -74,4 +74,28 @@
     </dependencies>
   </dependencyManagement>
 
+  <repositories>
+    <repository>
+      <id>com.asakusafw.releases</id>
+      <url>http://asakusafw.s3.amazonaws.com/maven/releases</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>com.asakusafw.snapshots</id>
+      <name>Asakusa Framework Snapshot Repository</name>
+      <url>http://asakusafw.s3.amazonaws.com/maven/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
 </project>
