--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,34 @@
   </scm>
 
   <properties>
+    <!-- plugin versions -->
+    <plugin.resources.version>3.0.2</plugin.resources.version>
+    <plugin.dependency.version>3.0.1</plugin.dependency.version>
+    <plugin.compiler.version>3.6.2</plugin.compiler.version>
+    <plugin.surefire.version>2.20</plugin.surefire.version>
+    <plugin.source.version>3.0.1</plugin.source.version>
+    <plugin.eclipse.version>2.10</plugin.eclipse.version>
+    <plugin.build-helper.version>3.0.0</plugin.build-helper.version>
+    <plugin.antrun.version>1.8</plugin.antrun.version>
+    <plugin.properties.version>1.0.0</plugin.properties.version>
+    <plugin.assembly.version>3.1.0</plugin.assembly.version>
+    <plugin.jar.version>3.0.2</plugin.jar.version>
+    <plugin.shade.version>3.1.0</plugin.shade.version>
+    <plugin.native.version>1.0-alpha-8</plugin.native.version>
+    <plugin.javadoc.version>3.0.0-M1</plugin.javadoc.version>
+    <plugin.release.version>2.5.3</plugin.release.version>
+    <plugin.deploy.version>2.8.2</plugin.deploy.version>
+    <plugin.wagon-ssh.version>3.0.0</plugin.wagon-ssh.version>
+    <plugin.aws-maven.version>5.0.0.RELEASE</plugin.aws-maven.version>
+    <plugin.license.version>3.0</plugin.license.version>
+    <plugin.checkstyle.version>2.17</plugin.checkstyle.version>
+    <plugin.findbugs.version>3.0.5</plugin.findbugs.version>
+    <plugin.site.version>3.6</plugin.site.version>
+    <plugin.project-info-reports.version>2.9</plugin.project-info-reports.version>
+    <plugin.surefire-report.version>2.20</plugin.surefire-report.version>
+    <plugin.scala.version>3.2.2</plugin.scala.version>
+    <plugin.scalastyle.version>0.8.0</plugin.scalastyle.version>
+
     <artifact.name>${project.artifactId}</artifact.name>
     <artifact.version>${project.version}</artifact.version>
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
@@ -55,7 +83,7 @@
     <hamcrest.version>1.3</hamcrest.version>
     <scalatest.version>2.2.3</scalatest.version>
 
-    <checkstyle.version>6.17</checkstyle.version>
+    <checkstyle.version>8.1</checkstyle.version>
   </properties>
 
   <modules>
@@ -75,7 +103,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.6</version>
+          <version>${plugin.resources.version}</version>
           <configuration>
             <encoding>UTF-8</encoding>
             <escapeString>\</escapeString>
@@ -84,7 +112,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+          <version>${plugin.compiler.version}</version>
           <configuration>
             <fork>true</fork>
             <source>${java.version}</source>
@@ -96,12 +124,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.4</version>
+          <version>${plugin.assembly.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>${plugin.surefire.version}</version>
           <configuration>
             <argLine>-ea</argLine>
             <includes>
@@ -128,7 +156,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.5</version>
+          <version>${plugin.jar.version}</version>
           <executions>
             <execution>
               <phase>package</phase>
@@ -151,12 +179,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>${plugin.shade.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.4</version>
+          <version>${plugin.source.version}</version>
           <executions>
             <execution>
               <phase>package</phase>
@@ -176,7 +204,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>${plugin.scala.version}</version>
           <configuration>
             <args>
               <arg>-target:jvm-${java.version}</arg>
@@ -195,7 +223,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
-          <version>2.10</version>
+          <version>${plugin.eclipse.version}</version>
           <configuration>
             <downloadSources>true</downloadSources>
             <downloadJavadocs>false</downloadJavadocs>
@@ -218,7 +246,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>2.8</version>
+          <version>${plugin.license.version}</version>
           <dependencies>
             <dependency>
               <groupId>com.asakusafw</groupId>
@@ -248,7 +276,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.1</version>
+          <version>${plugin.javadoc.version}</version>
           <configuration>
             <encoding>UTF-8</encoding>
             <charset>UTF-8</charset>
@@ -276,7 +304,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>${plugin.findbugs.version}</version>
           <dependencies>
             <dependency>
               <groupId>com.asakusafw</groupId>
@@ -294,7 +322,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.17</version>
+          <version>${plugin.checkstyle.version}</version>
           <dependencies>
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
@@ -309,12 +337,14 @@ encoding/<project>=UTF-8
           </dependencies>
           <configuration>
             <configLocation>com/asakusafw/checkstyle.xml</configLocation>
+            <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
+            <linkXRef>false</linkXRef>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.scalastyle</groupId>
           <artifactId>scalastyle-maven-plugin</artifactId>
-          <version>0.8.0</version>
+          <version>${plugin.scalastyle.version}</version>
           <configuration>
             <configLocation>scalastyle-config.xml</configLocation>
             <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
@@ -328,7 +358,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>${plugin.release.version}</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <pushChanges>false</pushChanges>
@@ -338,7 +368,7 @@ encoding/<project>=UTF-8
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>${plugin.deploy.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -346,7 +376,7 @@ encoding/<project>=UTF-8
       <extension>
         <groupId>org.springframework.build</groupId>
         <artifactId>aws-maven</artifactId>
-        <version>5.0.0.RELEASE</version>
+        <version>${plugin.aws-maven.version}</version>
       </extension>
     </extensions>
     <plugins>
@@ -390,7 +420,7 @@ encoding/<project>=UTF-8
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.1</version>
+        <version>${plugin.javadoc.version}</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <charset>UTF-8</charset>
@@ -416,25 +446,9 @@ encoding/<project>=UTF-8
         </reportSets>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.5.1</version>
-        <configuration>
-          <formats>
-            <format>xml</format>
-            <format>html</format>
-          </formats>
-          <instrumentation>
-            <excludes>
-              <exclude>**/*Test*.class</exclude>
-            </excludes>
-          </instrumentation>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.12</version>
+        <version>${plugin.surefire-report.version}</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -446,7 +460,7 @@ encoding/<project>=UTF-8
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.4</version>
+        <version>${plugin.project-info-reports.version}</version>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
