--- a/pom.xml
+++ b/pom.xml
@@ -60,30 +60,28 @@
     <plugin.scala.version>3.2.2</plugin.scala.version>
     <plugin.scalastyle.version>0.8.0</plugin.scalastyle.version>
 
-    <artifact.name>${project.artifactId}</artifact.name>
-    <artifact.version>${project.version}</artifact.version>
-    <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
-
+    <!-- artifact id/versions -->
     <asakusafw.version>0.10.0-SNAPSHOT</asakusafw.version>
     <asakusafw-lang.version>0.5.0-SNAPSHOT</asakusafw-lang.version>
-
-    <java.version>1.8</java.version>
+    <hadoop.version>2.7.3</hadoop.version>
+    <spark.version>2.2.0</spark.version>
     <scala.compat.version>2.11</scala.compat.version>
     <scala.version>${scala.compat.version}.8</scala.version>
-    <spark.version>2.2.0</spark.version>
-    <jetty.version>9.2.16.v20160414</jetty.version>
-    <hadoop.version>2.7.3</hadoop.version>
+    <jetty.version>9.4.6.v20170531</jetty.version>
     <asm.version>5.2</asm.version>
     <scala-arm.version>1.4</scala-arm.version>
     <guava.version>14.0.1</guava.version>
-
-    <slf4j.version>1.7.9</slf4j.version>
-
+    <slf4j.version>1.7.25</slf4j.version>
     <junit.version>4.12</junit.version>
     <hamcrest.version>1.3</hamcrest.version>
     <scalatest.version>2.2.3</scalatest.version>
-
     <checkstyle.version>8.1</checkstyle.version>
+
+    <!-- build configuration -->
+    <java.version>1.8</java.version>
+    <artifact.name>${project.artifactId}</artifact.name>
+    <artifact.version>${project.version}</artifact.version>
+    <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
   </properties>
 
   <modules>
