--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -28,6 +28,7 @@ def versions = { f ->
     def props = xml['properties']
     return [
         'asakusafw' : props['asakusafw.version'],
+        'asakusafw-lang' : props['asakusafw-lang.version'],
         'asakusafw-spark' : xml.version.text(),
     ]
 }(project.file('../pom.xml'))
@@ -59,6 +60,7 @@ dependencies {
     runtime 'org.slf4j:slf4j-simple:1.7.25'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     integrationTestData "com.asakusafw.integration:asakusa-core-integration:${versions['asakusafw']}:integration-test-data@zip"
+    integrationTestData "com.asakusafw.integration:asakusa-lang-integration:${versions['asakusafw-lang']}:integration-test-data@zip"
     deployerJars 'org.springframework.build:aws-maven:5.0.0.RELEASE'
 }
 
