--- a/tools/asm4s/pom.xml
+++ b/tools/asm4s/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.asakusafw.spark</groupId>
     <artifactId>asakusa-spark-tools</artifactId>
-    <version>0.5.4-RC1</version>
+    <version>0.5.4-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
