--- a/extensions/iterativebatch/runtime/iterative/pom.xml
+++ b/extensions/iterativebatch/runtime/iterative/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.asakusafw.spark.extensions</groupId>
     <artifactId>asakusa-spark-extensions-iterativebatch-runtime</artifactId>
-    <version>0.5.4</version>
+    <version>0.5.5-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
