--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,8 @@
     <plugin.scalastyle.version>0.9.0</plugin.scalastyle.version>
 
     <!-- artifact id/versions -->
-    <asakusafw.version>0.10.4</asakusafw.version>
-    <asakusafw-lang.version>0.5.4</asakusafw-lang.version>
+    <asakusafw.version>0.10.5-SNAPSHOT</asakusafw.version>
+    <asakusafw-lang.version>0.5.5-SNAPSHOT</asakusafw-lang.version>
     <hadoop.version>2.7.3</hadoop.version>
     <spark.version>2.2.0</spark.version>
     <scala.compat.version>2.11</scala.compat.version>
